fixing beatHome title alignment

--- a/src/styles/beatHome.css
+++ b/src/styles/beatHome.css
@@ -54,7 +54,6 @@
         margin-left: -210px;
     }
     .beatNameDesk {
-        margin-top: 0px;
         margin-left: 5px;
     }
     .play {
